--- a/style.css
+++ b/style.css
@@ -1,3 +1,69 @@
+/* profile-info {
+    display : block;
+    font-family: sans-serif;
+}
+
+.profile-info__emp-type-ft{
+    background-color: #7bb57b;
+}
+.profile-info__emp-type-pt{
+    background-color: #ffc107;
+}
+.profile-info__emp-type-ct{
+    background-color: #03a9f4;
+}
+
+.profile-info__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.profile-info__picture {
+    border-radius: 50%;
+    width: 80vw;
+    height: 80vw;
+    margin: 10px auto;
+}
+
+.profile-info__text {
+    padding: 10px;
+    flex : 1;
+}
+
+.profile-info__name {
+    font-size: 22px;
+}
+
+.profile-info__designation {
+    font-size: 22px;
+    margin-top: 10px;
+}
+
+.profile-info__id-number {
+    margin-top: 10px;
+}
+
+
+@media screen and (min-width: 650px) {
+    .profile-info__container {
+        flex-direction: row;
+        text-align: left;
+    }
+
+    .profile-info__picture {
+        width: 100px;
+        height: 100px;
+        margin: 10px;
+    }
+} */
+
+
+
+
+
+
 /* company-login {
     display: flex;
     flex-direction: column;
@@ -43,7 +109,7 @@ company-login button {
 
 
 
-company-header {
+/* company-header {
     display: flex;
     background: #44afdc;
     align-items: center;
@@ -69,4 +135,4 @@ company-header .header-links {
     text-decoration: none;
     padding: 20px;
     color: white;
-}
+} */
